# kombi

./: README.md  pyproject.toml
kombi/: __init__.py  __main__.py  compat.py  infer.py  lamb.py  ops.py
kombi/monad/: __init__.py  __main__.py  base.py  io.py
tests/: test_ops.py
